--- a/payroll/calculate/benefit/remote.html
+++ b/payroll/calculate/benefit/remote.html
@@ -388,10 +388,10 @@
 
 
 <li> <h3 id="step5">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Generally,  <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">board, lodging and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> you provide to your employees are taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Generally, <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">board, lodging and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> you provide to your employees are taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4 id="special">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you paid an allowance or reimburse your employee, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the CRA's administrative policy, if you provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee was required by employment duties to be away for at least 36 hours (step 2)</li>
 <li class="cnjnctn-col">The work location is considered remote (step 3)</li>
@@ -687,6 +687,15 @@
 </dl>
 </div>
 </div>
+
+<section id="allowance" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an allowance</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-allowance"></div>
+	</div></section>
+	<section id="reimbursement" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a reimbursement</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-reimbursement"></div>
+	</div></section>
 
 <section id="def" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Board and lodging benefit vs housing or utilities benefit</h2>
 	</header>	<div class="modal-body">		
