--- a/payroll/calculate/benefit/board-lodging-expenses.html
+++ b/payroll/calculate/benefit/board-lodging-expenses.html
@@ -284,7 +284,7 @@
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 
 </div>
-<p>You may provide a benefit or an allowance to your employee to compensate for the cost of board, lodging, housing or utilities in connection with or in the course of their office or employment duties.</p>
+<p>You may provide a <a href="#benefit" aria-controls="centred-popup" class="wb-lbx" role="button">benefit&nbsp;<span class="far fa-question-circle"></span></a> or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> to your employee to compensate for the cost of board, lodging, housing or utilities in connection with or in the course of their office or employment duties.</p>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/def-board-transportation.txt"></div></p>
 
   <h2 class="h3">On this page</h2>
@@ -318,9 +318,9 @@
 <p class="mrgn-bttm-lg">Generally, <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">board, lodging, housing and utilities&nbsp;<span class="far fa-question-circle"></span></a> you provide or pay on behalf of your employees are taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act.</p>
 
 <h4>Non-taxable situation</h4>
-<details><summary>You paid or reimburse your employee is a <strong>participant or member of a sports team or recreational program</strong> for board and lodging</summary>
+<details><summary>You paid an allowance or reimburse your employee is a <strong>participant or member of a sports team or recreational program</strong> for board and lodging</summary>
 <h4 id="sports">Non-taxable situation</h4>
-<p>Under the Income Tax Act (ITA), if you paid an allowance or reimburse your employee who is a <strong>participant or member of a sports team or recreational program</strong> for board and lodging expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the Income Tax Act (ITA), if you provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee who is a <strong>participant or member of a sports team or recreational program</strong> for board and lodging expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Amount is equal or less then $386 (for 2022) per month</li>
@@ -636,6 +636,20 @@
 </dl>
 </div>
 </div>
+
+<section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-benefit"></div>
+	</div></section>
+	<section id="allowance" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an allowance</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-allowance"></div>
+	</div></section>
+	<section id="reimbursement" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a reimbursement</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-reimbursement"></div>
+	</div></section>
+
 
 <section id="def" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Board and lodging benefit vs housing or utilities benefit</h2>
 	</header>	<div class="modal-body">		
