--- a/payroll/calculate/benefit/special-site.html
+++ b/payroll/calculate/benefit/special-site.html
@@ -278,7 +278,7 @@
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 </div>
-<p>You may provide a benefit for board, lodging, housing, utilities and travel expenses to your employee who works or lives in a location that is in a special work site, including in a prescribed zone, in connection with or in the course of their office or employment duties.</p>
+<p>You may provide a provide a <a href="#benefit" aria-controls="centred-popup" class="wb-lbx" role="button">benefit&nbsp;<span class="far fa-question-circle"></span></a> for board, lodging, housing, utilities and travel expenses to your employee who works or lives in a location that is in a special work site, including in a prescribed zone, in connection with or in the course of their office or employment duties.</p>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/def-board-transportation.txt"></div></p>
 
 <h2 class="h3">On this page</h2>
@@ -411,10 +411,10 @@
 </li>
 
 <li> <h3 id="step7">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Generally, <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">board, lodging, housing, utilities and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> you provide or reimburse to your employees are taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Generally, if you provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">board, lodging, housing, utilities and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4 id="special">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you paid an allowance or reimburse your employee, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the CRA's administrative policy, if you provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee was required by employment duties to be away for at least 36 hours (step 2)</li>
 <li class="cnjnctn-col">Your employee's employment duties are considered temporary (step 3)</li>
@@ -1060,6 +1060,11 @@ The accommodations were owned by the employer. The ceiling value of the board an
 </dl>
 </div>
 </div>
+
+<section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-benefit"></div>
+	</div></section>
 
 <section id="def" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Board and lodging benefit vs housing or utilities benefit</h2>
 	</header>	<div class="modal-body">		
