--- a/payroll/calculate/benefit/clergy.html
+++ b/payroll/calculate/benefit/clergy.html
@@ -278,7 +278,7 @@
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 </div>
-<p>You may provide a benefit or an allowance to your employee who is a member of the clergy or of a religious order to compensate for the cost of housing, utilities and travel expenses in connection with or in the course of their office or employment duties.</p>
+<p>You may provide a <a href="#benefit" aria-controls="centred-popup" class="wb-lbx" role="button">benefit&nbsp;<span class="far fa-question-circle"></span></a> or an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> to  your employee who is a member of the clergy or of a religious order to compensate for the cost of housing, utilities and travel expenses in connection with or in the course of their office or employment duties.</p>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/def-board-transportation.txt"></div></p>
  
 
@@ -310,7 +310,7 @@
 </li>
 
 <li> <h3 id="step2">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Generally, <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">housing, utilities and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> you provide or reimburse to your employees who is a member of the clergy or a religious order are taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act. </p>
+<p class="mrgn-bttm-lg">Generally, if you provide  an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for  <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">housing, utilities and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> to your employee who is a member of the clergy or a religious order, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act. </p>
 <h4>Taxable situation</h4>
 <p>The benefit is taxable if you provide or pay on behalf of your employee the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -717,6 +717,20 @@
 </dl>
 </div>
 </div>
+
+<section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-benefit"></div>
+	</div></section>
+	<section id="allowance" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an allowance</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-allowance"></div>
+	</div></section>
+	<section id="reimbursement" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a reimbursement</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-reimbursement"></div>
+	</div></section>
+
 
 <section id="def" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Board and lodging benefit vs housing or utilities benefit</h2>
 	</header>	<div class="modal-body">		
