--- a/payroll/calculate/benefit/meal-expenses.html
+++ b/payroll/calculate/benefit/meal-expenses.html
@@ -287,7 +287,7 @@
 
 </div>
 
-<p>You may provide a free meal, an allowance or reimbursement for an overtime meal or provide a subsidized meal to your employees.</p>
+<p>You may provide a free meal,  an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee for an overtime meal or provide a subsidized meal.</p>
 
 	
  <h2 class="h3">On this page</h2>  	
@@ -305,8 +305,8 @@
 <p>The benefit may not be taxable if you provide to your employee is in <strong>one</strong> of the following special situations:</p>
 
 <ul>
-<li>Refer to: <a href="travel-expenses.html">You provide a meal part of a travel expense to your employee</a> </li>
-<li>Refer to: <a href="social.html">You provide a meal part of a social event or a hospitality function to your employee</a> </li>
+<li><a href="travel-expenses.html">You provide a meal part of a travel expense to your employee</a> </li>
+<li><a href="social.html">You provide a meal part of a social event or a hospitality function to your employee</a> </li>
 </ul>
 
 </div>
@@ -318,7 +318,7 @@
 </li>
 
 <li><h3 id="step2">Determine if a benefit is taxable</h3>
-<p>Generally, free meals, meal allowances or reimbursements you provide to your employees are taxable.</p>
+<p>Generally, if you provide a free meal, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for meal expenses to your employee, the benefit is taxable.</p>
 <p class="mrgn-bttm-md"> Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 <h4>Situations</h4>
 <details><summary>Situation: You provide a <strong>free meal</strong> to your employee</summary>
@@ -474,6 +474,19 @@
 </dl>
 </div>
 </div>
+
+<section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-benefit"></div>
+	</div></section>
+	<section id="allowance" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an allowance</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-allowance"></div>
+	</div></section>
+	<section id="reimbursement" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a reimbursement</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-reimbursement"></div>
+	</div></section>
 
 	<section id="adminpolicy" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is the CRA's administrative policy for the purpose of taxable benefits</h2>
 	</header>	<div class="modal-body">		
