--- a/payroll/calculate/benefit/moving-expenses.html
+++ b/payroll/calculate/benefit/moving-expenses.html
@@ -284,7 +284,7 @@
 
 </div>
 
-<p>You may provide an allowance, a reimbursement or you pay on behalf of your employee moving expenses or housing loss in connection with or in the course of their office or employment duties. </p>
+<p>You may provide a <a href="#benefit" aria-controls="centred-popup" class="wb-lbx" role="button">benefit&nbsp;<span class="far fa-question-circle"></span></a>, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> to your employee for moving expenses or housing loss in connection with or in the course of their office or employment duties. </p>
 
 
 	
@@ -346,7 +346,7 @@
 </li>
 
 <li> <h3 id="step2">Determine if the benefit is taxable</h3>
-<p>Generally, moving or relocation allowances or reimbursements you provide to your employees are taxable. </p>
+<p>Generally, if you provide an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for moving or relocation to your employee, the benefit is taxable. </p>
 <p>Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a> or the Income Tax Act. </p>
 
 <h4>Situations</h4>
@@ -971,6 +971,20 @@ In May 2022, the employee sold their residence for a cost of $362,801. In June 2
 </dl>
 </div>
 </div>
+
+<section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-benefit"></div>
+	</div></section>
+	<section id="allowance" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is an allowance</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-allowance"></div>
+	</div></section>
+	<section id="reimbursement" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a reimbursement</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="what.html #ajax-reimbursement"></div>
+	</div></section>
+
 	<section id="list" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">List of expenses that are not taxable</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-list"></div>
