--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -329,8 +329,27 @@
 </li>
 
 <li><h3 id="step3">Determine if the allowance or reimbursement is reasonable</h3>
-<p>Whether an allowance or reimbursement for travel expenses is reasonable is a question of fact. You should compare the reasonable costs for travel expenses that you would expect your employee to incur against the allowance or reimbursement you pay to the employee for the trip. In general, the CRA considers an allowance or a reimbursement reasonable if it covers the expenses that the employee paid as long as these expenses are not considered another form of remuneration. Amounts that are too high or too low can be considered unreasonable depending on the facts.</p>
-<p>You and your employee must be able to justify that the payment for travel expenses was reasonable should the non-inclusion of the benefit in the employee's income be reviewed. In supporting this claim, where applicable, you must get records from your employee to support the reasonability of the reimbursement or accountable allowance paid.</p>
+<p>You must consider <strong>all of the facts </strong>relevant to your employee's situation to determine if the travel expense is considered <strong>reasonable</strong>.</p>
+<p>This determination must be done based on a review of the facts in each specific situation.</p>
+<p>Generally, the CRA considers the amount to be <strong>reasonable </strong>if:</p>
+
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">Employee is required to travel in the course of their employment duties (step 2) </li>
+<li class="cnjnctn-col">Your employee kept the required records, and you received a copy to support these amounts. For example, receipts for:
+<ul  class="fa-ul">
+<li><span class="fas fa-check fa-li fa-lg text-success"></span> Airfare cost</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"></span> Hotel cost</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"></span> Meal cost</li>
+</ul>
+</li>
+<li class="cnjnctn-col">You can justify your position for the amount being reasonable </li>
+<li class="cnjnctn-col">It is not a form of additional remuneration and is not a form of tax avoidance </li>
+</ul>
+<p>If you <strong>cannot </strong>get the required records, you must use reasonable estimates to determine the amount is based on facts.</p>
+<p>Depending on your situation, you may determine that a reasonable amount would be lower or higher. </p>
+<p>To confirm what the CRA would consider reasonable in your situation, you can ask for an advance income tax ruling that is binding on the CRA.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/tax-professionals/income-tax-rulings-interpretations.html">Income tax rulings and technical interpretations</a></p>
+
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"> </span> If the amount of the payment for travel expenses is <strong>not</strong> reasonable, the benefit is taxable.</p>
