--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -323,7 +323,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to travel in the course of their employment duties, the benefit from the allowance or the reimbursement paid to the employee is <strong>taxable</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a> </p>  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to travel in the course of their employment duties, the benefit from the allowance or the reimbursement paid to the employee may not be taxable if they meet <strong>all conditions</strong>. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to travel in the course of their employment duties, the benefit from the allowance or the reimbursement paid to the employee may not be taxable. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step3">Step 3 - Determine if the allowance or reimbursement is reasonable</a></p></li>
 </ul>
 </li>
@@ -333,7 +333,7 @@
 <p>This determination must be done based on a review of the facts in each specific situation.</p>
 <p>Generally, the CRA considers the amount to be <strong>reasonable </strong>if:</p>
 
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employee is required to travel in the course of their employment duties (step 2) </li>
 <li class="cnjnctn-col">Your employee kept the required records, and you received a copy to support these amounts. For example, receipts for:
 <ul  class="fa-ul">
