--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -528,7 +528,7 @@
                                     <li><span class="fa-stack text-success">
                                        <span class="far fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">Total value of the travel allowances or reimbursements that are taxable</span> 
+                                       </span><span class="mrgn-tp-0 text-muted h5">Total value of the benefit received or enjoyed</span> 
                                     </li>
 
  				<li class="brdr-bttm">
@@ -542,7 +542,7 @@
                      	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">Value of the benefit <strong>to be included on the T4 slip in code 40 and box 14</strong>
+                                       </span> <span class="mrgn-tp-0 text-muted h5">Value of the benefit <strong>to be included on the T4 slip </strong>
                                        </span></span> 
                                     </li>
 		
@@ -596,7 +596,7 @@
                      	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,200 is the value of the benefit to be included on employee's T4 slip in code 40
+                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,200 is the value of the benefit to be included on employee's T4 slip 
                                        </span></span> 
                                     </li>
 		
@@ -624,7 +624,7 @@
 			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                        <span class="fas fa-circle fa-stack-2x"></span>
                                        <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">2,400 is the value of the benefit to be included on employee's T4 slip in code 40
+                                       </span> <span class="mrgn-tp-0 text-muted h5">2,400 is the value of the benefit to be included on employee's T4 slip 
                                        </span></span> 
                                     </li>		
 
