--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -384,7 +384,7 @@
 <p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
 </details>
 
-<details><summary>Situation: Your employee is a <strong>salesperson, an agent selling property or negotiating contracts or a member of the clergy</strong></summary>
+<details><summary>Situation: Your employee is a <strong>salesperson</strong>, an <strong>agent selling property</strong> or <strong>negotiating contracts</strong> or a <strong>member of the clergy</strong></summary>
 <h4 id="agent">Non-taxable situation</h4>
 <p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your employee who is a <strong>salesperson, an agent selling property or negotiating contracts or a member of the clergy</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
@@ -402,6 +402,59 @@
 <p>Under the Income Tax Act (ITA), if you paid a travel and separation allowance under service regulations to your employee who is a <strong>member of the Canadian Forces</strong>, the benefit is <strong>not </strong>taxable.</p>
 
 <p>Learn more from the Department of National Defence: <a href="https://www.canada.ca/en/department-national-defence/corporate/policies-standards/compensation-benefits-instructions/chapter-209-transportation-expenses.html#sec-209-30">Chapter 209 - Transportation and Travelling Expenses</a></p>
+</details>
+
+<details><summary>Situation: Your employee is travelling <strong>outside of your municipality or metropolitan area</strong></summary>
+<h4 id="other2">Non-taxable situation</h4>
+<p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling away from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
+<li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
+</ul>
+<h4>Taxable situation</h4>
+<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
+</details>
+
+<details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
+<h4 id="other">Non-taxable situation</h4>
+<p>Under the CRA's administrative policy, if you provide a travel allowance (other than an allowance related to the use of a vehicle) within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, so your employee can perform their duties in a more efficient manner, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">The amount of the travel allowance is <strong>reasonable</strong>, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
+<li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (step 3)</li>
+ <li class="cnjnctn-col">You are the <strong>primary beneficiary</strong> of the allowance </li>
+ <li class="cnjnctn-col">The travel allowance is not a form of additional remuneration and is not a form of tax avoidance</li>
+</ul>
+<p>This means that you do not have to include this type of travel allowance if its main reason is so that your employee's duties are performed in a more efficient way during a work shift.</p>
+<details class="mrgn-bttm-md"><summary>Examples </summary>
+    <div class="table-responsive">
+      <table class="table table-striped small table-condensed">
+        <caption class="wb-inv">
+       Examples 
+        </caption>
+<thead class="small">
+<tr>
+<th scope="col">Examples</th>
+<th scope="col">Result</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+	<td><p>Antoine installs and repairs power lines for a hydroelectric company. He works in an area of the municipality located over an hour from his office, where he generally has lunch. Instead of Antoine driving to the office during his normal meal break and returning to his workplace afterward, the employer pays him a reasonable meal allowance to allow him to eat at a restaurant closer to where he performs his duties. The employer is the primary beneficiary of this arrangement and the allowance would not be included in Antoine's salary.</p>
+
+</td>
+	<td><p>The benefit is <strong>not</strong> taxable.</p>  </td>
+</tr>
+<tr>
+	<td><p>Jeannine works for DEF Corporation and must occasionally use her vehicle to travel into the municipality for supplies as part of her duties. This generally takes up the better part of her day. DEF gives Jeannine a daily allowance of $50 to cover vehicle expenses and all food and drink expenses that she may incur while performing her duties outside her normal workplace. Because this policy does not include a motor vehicle use allowance, we would consider unreasonable the $50 allowance that would cover her meals and her motor vehicle expenses. </p></td>
+	<td><p>The allowance is a taxable benefit for Jeannine except if DEF Corporation can prove that the portion related to meals is reasonable under the circumstances. </p> </td>
+</tr>
+<tr>
+	<td><p>An employer gives its employees a travel allowance that covers food and drink when they have to go outside their normal workplace to perform duties. One of the employees regularly returns to the office before noon and stays there until having to go to an appointment that afternoon. It would be to the employee's advantage to return to the office to have his meal. </p></td>
+	<td><p>The allowance is taxable because it takes the form of another type of compensation. However, if it happens that the employee is legitimately outside the office during his normal meal break, the allowance for those days may be excluded from his income. </p></td>
+</tr> </tbody> </table></div></details>
+<h4>Taxable situation</h4>
+<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the full amount is a taxable benefit.</p>
 </details>
 
 <details><summary>Situation: You pay travel expenses on a <strong>business trip for your employee </strong></summary>
@@ -462,59 +515,6 @@
 	
 </details>
 	
-<details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
-<h4 id="other">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you provide a travel allowance (other than an allowance related to the use of a vehicle) within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, so your employee can perform their duties in a more efficient manner, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The amount of the travel allowance is <strong>reasonable</strong>, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
-<li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (step 3)</li>
- <li class="cnjnctn-col">You are the <strong>primary beneficiary</strong> of the allowance </li>
- <li class="cnjnctn-col">The travel allowance is not a form of additional remuneration and is not a form of tax avoidance</li>
-</ul>
-<p>This means that you do not have to include this type of travel allowance if its main reason is so that your employee's duties are performed in a more efficient way during a work shift.</p>
-<details class="mrgn-bttm-md"><summary>Examples </summary>
-    <div class="table-responsive">
-      <table class="table table-striped small table-condensed">
-        <caption class="wb-inv">
-       Examples 
-        </caption>
-<thead class="small">
-<tr>
-<th scope="col">Examples</th>
-<th scope="col">Result</th>
-</tr>
-</thead>
-<tbody>
-
-<tr>
-	<td><p>Antoine installs and repairs power lines for a hydroelectric company. He works in an area of the municipality located over an hour from his office, where he generally has lunch. Instead of Antoine driving to the office during his normal meal break and returning to his workplace afterward, the employer pays him a reasonable meal allowance to allow him to eat at a restaurant closer to where he performs his duties. The employer is the primary beneficiary of this arrangement and the allowance would not be included in Antoine's salary.</p>
-
-</td>
-	<td><p>The benefit is <strong>not</strong> taxable.</p>  </td>
-</tr>
-<tr>
-	<td><p>Jeannine works for DEF Corporation and must occasionally use her vehicle to travel into the municipality for supplies as part of her duties. This generally takes up the better part of her day. DEF gives Jeannine a daily allowance of $50 to cover vehicle expenses and all food and drink expenses that she may incur while performing her duties outside her normal workplace. Because this policy does not include a motor vehicle use allowance, we would consider unreasonable the $50 allowance that would cover her meals and her motor vehicle expenses. </p></td>
-	<td><p>The allowance is a taxable benefit for Jeannine except if DEF Corporation can prove that the portion related to meals is reasonable under the circumstances. </p> </td>
-</tr>
-<tr>
-	<td><p>An employer gives its employees a travel allowance that covers food and drink when they have to go outside their normal workplace to perform duties. One of the employees regularly returns to the office before noon and stays there until having to go to an appointment that afternoon. It would be to the employee's advantage to return to the office to have his meal. </p></td>
-	<td><p>The allowance is taxable because it takes the form of another type of compensation. However, if it happens that the employee is legitimately outside the office during his normal meal break, the allowance for those days may be excluded from his income. </p></td>
-</tr> </tbody> </table></div></details>
-<h4>Taxable situation</h4>
-<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the full amount is a taxable benefit.</p>
-</details>
-
-
-<details><summary>Situation: Your employee is travelling <strong>outside of your municipality or metropolitan area</strong></summary>
-<h4 id="other2">Non-taxable situation</h4>
-<p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling away from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
-<li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
-</ul>
-<h4>Taxable situation</h4>
-<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
-</details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
