--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -372,13 +372,20 @@
 <p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your part-time employee for reasonable travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee is <strong>either</strong>:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">A teacher or professor who works part-time in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to you as a teacher or professor and the location of their employment is 80 kilometres or more from their home</li>
-<li class="cnjnctn-col">has other employment or carries on a business outside of their employment with you and they performed their employment duties at a location 80 kilometres or more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
-</ul></li>
 <li class="cnjnctn-col">Your employee incurs the expenses from travelling <strong>to and from the part-time job</strong> </li>
 <li class="cnjnctn-col">You and your employee are <strong>at arm's length</strong> </li>
+<li class="cnjnctn-col">Your employee is in <strong>one</strong> of the following situation:
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">Employee is:
+<ul><li>A teacher or professor who works part-time in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to you as a teacher or professor </li>
+<li>The location of their employment is 80 kilometres or more from their home</li>
+</ul></li>
+<li class="cnjnctn-col">Employee:
+<ul>
+<li>has other employment or carries on a business outside of their employment with you</li>
+<li> The location of their employment is 80 kilometres ore more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
+</ul></li></ul></li>
+
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
 <p class="mrgn-tp-md">A <strong>thorough review of the facts in each specific situation</strong> must be done to determine if the benefit is taxable. </p>
